fixed position playlist on mobile UI

--- a/src/components/ItemTitle/ItemTitle.css
+++ b/src/components/ItemTitle/ItemTitle.css
@@ -1,11 +1,17 @@
 .item__title {
-    font-family: Oswald;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height */
-    color: #25211D;
-    margin: 0;
-    transition: .5s ease;
+  font-family: Oswald;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+  color: #25211d;
+  margin: 0;
+  transition: 0.5s ease;
+}
+@media (max-width: 475px) {
+  .item__title {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
