--- a/src/components/Playlists/Playlists.css
+++ b/src/components/Playlists/Playlists.css
@@ -1,3 +1,5 @@
 .playlists {
     display: flex;
+    position: fixed;
+    overflow: hidden
 }
